--- a/404.html
+++ b/404.html
@@ -1,5 +1,6 @@
+https://pstechcdn.vercel.app/css/404styles.scss
 <div class="about">
-   <a class="bg_links social portfolio" href="https://www.rafaelalucas.com" target="_blank">
+   <a class="bg_links social portfolio" href="https://" target="_blank">
       <span class="icon"></span>
    </a>
    <a class="bg_links social dribbble" href="https://dribbble.com/rafaelalucas" target="_blank">
