--- a/404.html
+++ b/404.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="https://pstechcdn.vercel.app/css/404styles.scss">
+<link rel="stylesheet/scss" type="text/css" href="https://pstechcdn.vercel.app/css/404styles.scss">
 <div class="about">
    <a class="bg_links social portfolio" href="https://" target="_blank">
       <span class="icon"></span>
