--- a/404.html
+++ b/404.html
@@ -1,4 +1,9 @@
+<html>
 <link rel="stylesheet/scss" type="text/css" href="https://pstechcdn.vercel.app/css/404styles.scss">
+<script>
+           var scene = document.getElementById('scene');
+           var parallax = new Parallax(scene);
+</script>
 <div class="about">
    <a class="bg_links social portfolio" href="https://" target="_blank">
       <span class="icon"></span>
@@ -74,3 +79,4 @@
 
         </div>
     </section>
+</html>
